@@ -14,7 +14,7 @@ module Fairy
 
 ##CONF.MASTER_HOST = #NO SYSTEM DEFAULT VALUE
   CONF.MASTER_HOST = "emperor2"
-  CONF["emperor2v1"].MASTER_HOST = "emperor2"
+  CONF["emperor2v1"].MASTER_HOST = "emperor2v1"
 #  CONF.MASTER_HOST = "giant"
 ##CONF.MASTER_PORT = "19999"
 
@@ -117,7 +117,7 @@ CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 ##CONF.LOG_LEVEL = :DEBUG
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
-#CONF.LOG_IMPORT_NTIMES_POP = 1
+#CONF.LOG_IMPORT_NTIMES_POP = 100000
 
 ##  CONF.PROCESSOR_MON_ON = false
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
